chore: preparar backend para despliegue en staging (CORS dinámico, Actuator y Dockerfile)